context: Add a "js-version" GObject property

Allow consumers to specify the JavaScript version, rather than
hardcoding 1.8.  The default for this patch remains 1.8 though.

https://bugzilla.gnome.org/show_bug.cgi?id=636652